# studyassist_backend

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py  auth.py  config.py  database.py
src/models/: notebook.py  user.py
src/rag/: query.py  store.py
src/rag/ingestion/: __init__.py  common.py  image.py  pdf.py  url.py
src/routers/: auth.py  flashcards.py  notebooks.py  pages.py
src/services/: document_processor.py  llm_service.py
